--- a/klon/templates/base.html
+++ b/klon/templates/base.html
@@ -7,8 +7,9 @@
 
     {% load static %}
 
-    <!-- Alpine + HTMX + TAILWIND -->
-    <link href="{% static 'css/tailwind.min.css' %}" rel="stylesheet">
+    <!-- Alpine + HTMX + TAILWIND + CUSTOM -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="{% static 'css/custom.css' %}" rel="stylesheet">
     <script defer src="{% static 'js/alpine.min.js' %}"></script>
     <script src="{% static 'js/htmx.min.js' %}"></script>
 
