Start strony profilowej + edycja base + start navabaru

--- a/klon/templates/base.html
+++ b/klon/templates/base.html
@@ -13,9 +13,13 @@
     <script defer src="{% static 'js/alpine.min.js' %}"></script>
     <script src="{% static 'js/htmx.min.js' %}"></script>
 
-    {% block extra_head %}{% endblock %}
+    {% block extra_head %}
+    
+    {% endblock %}
 </head>
 <body>
-    {% block content %}{% endblock %}
+    {% block content %}
+    
+    {% endblock %}
 </body>
 </html>
