--- a/klon/members/templates/authenticate/login.html
+++ b/klon/members/templates/authenticate/login.html
@@ -1,14 +1,10 @@
 {% extends "base.html" %}
+block title %}Zaloguj sie{% endblock %}
+{% block extra_head %}
+{% endblock %}
+
 
 {% block content %}
-    <!--
-  This example requires updating your template:
-
-  ```
-  <html class="h-full bg-white">
-  <body class="h-full">
-  ```
--->
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
     <div class="sm:mx-auto sm:w-full sm:max-w-sm">
       <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/plus-assets/img/logos/mark.svg?color=indigo&shade=600" alt="Your Company">
