nowe przekierowanie po udanym loginie, bugfixy

--- a/klon/members/templates/authenticate/login.html
+++ b/klon/members/templates/authenticate/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-block title %}Zaloguj sie{% endblock %}
+{% block title %}Zaloguj sie{% endblock %}
 {% block extra_head %}
 {% endblock %}
 
