--- a/klon/user_profile/templates/profil_gracza/profil.html
+++ b/klon/user_profile/templates/profil_gracza/profil.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
-{% block title %}Profil gracza{% endblock %}
+{% block title %} Profil gracza 
+{% endblock %}
 {% block extra_head %}
 {% endblock %}
 {% block extra_navbar %}
