poprawki w plikach html

--- a/klon/templates/base.html
+++ b/klon/templates/base.html
@@ -18,8 +18,11 @@
     {% endblock %}
 </head>
 <body>
+    {% block navbar %}
+    {% endblock %}
     {% block content %}
-    
+    {% endblock %}
+    {% block footer %}
     {% endblock %}
 </body>
 </html>
