--- a/klon/user_profile/templates/profil_gracza/profil.html
+++ b/klon/user_profile/templates/profil_gracza/profil.html
@@ -3,9 +3,11 @@
 {% endblock %}
 {% block extra_head %}
 {% endblock %}
-{% block extra_navbar %}
+{% block navbar %}
+{% include "navbar.html" %}
 {% endblock %}
 {% block content %}
-
-
+{% endblock %}
+{% block footer %}
+{% include 'footer.html' %}
 {% endblock %}
