--- a/klon/members/templates/authenticate/login.html
+++ b/klon/members/templates/authenticate/login.html
@@ -2,6 +2,9 @@
 {% block title %}Zaloguj sie{% endblock %}
 {% block extra_head %}
 {% endblock %}
+{% block navbar %}
+{% include "navbar.html" %}
+{% endblock %}
 
 
 {% block content %}
