--- a/klon/templates/navbar.html
+++ b/klon/templates/navbar.html
@@ -1,3 +1,13 @@
-<navbar>
-<h1>NAVBAR</h1>
+<navbar class="float-root">
+        {% if user.is_authenticated %}
+        <div class="float-right py-2">
+            <a href="{% url 'logout_user' %}" class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">Wyloguj</a>
+        </div>
+    {% else %}
+        <div class="float-right py-2">
+            <a href="{% url 'login_user' %}" class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">Zaloguj</a>
+            <a href="#" class="bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-2 px-4 border border-green-500 hover:border-transparent rounded">Zarejestruj</a>
+        </div>
+    {% endif %}
 </navbar>
+
