zrobienie plików html bardziej czytelnymi

--- a/klon/user_profile/templates/profil_gracza/profil.html
+++ b/klon/user_profile/templates/profil_gracza/profil.html
@@ -1,13 +1,20 @@
 {% extends "base.html" %}
-{% block title %} Profil gracza 
+
+{% block title %} 
+Profil gracza 
 {% endblock %}
+
 {% block extra_head %}
+
 {% endblock %}
+
 {% block navbar %}
 {% include "navbar.html" %}
 {% endblock %}
+
 {% block content %}
 {% endblock %}
+
 {% block footer %}
 {% include 'footer.html' %}
 {% endblock %}
