--- a/klon/templates/base.html
+++ b/klon/templates/base.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}Placeholder{% endblock %}</title>
 
     {% load static %}
 
     <!-- Alpine + HTMX + TAILWIND + CUSTOM -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="{% static 'css/custom.css' %}" rel="stylesheet">
+    <link href="{% static 'css/custom.css' %}" rel="stylesheet" />
     <script defer src="{% static 'js/alpine.min.js' %}"></script>
     <script src="{% static 'js/htmx.min.js' %}"></script>
 
-    {% block extra_head %}
-    
-    {% endblock %}
-</head>
-<body>
-    {% block navbar %}
-    {% endblock %}
-    {% block content %}
-    {% endblock %}
-    {% block footer %}
-    {% endblock %}
-</body>
+    {% block extra_head %} {% endblock %}
+  </head>
+  <body>
+    {% block navbar %} {% endblock %} 
+    {% block content %} {% endblock %} 
+    {% block footer %} {% endblock %}
+  </body>
 </html>
