rozwój profilu + wrzucenie do settings zasobów static

--- a/klon/templates/base.html
+++ b/klon/templates/base.html
@@ -16,6 +16,7 @@
     {% block extra_head %} {% endblock %}
   </head>
   <body>
+    {% block banner_up %} {% endblock %}
     {% block navbar %} {% endblock %} 
     {% block content %} {% endblock %} 
     {% block footer %} {% endblock %}
