--- a/klon/user_profile/templates/profil_gracza/profil.html
+++ b/klon/user_profile/templates/profil_gracza/profil.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %} 
 Profil gracza 
@@ -8,40 +9,52 @@ Profil gracza
 
 {% endblock %}
 
-{% block navbar %}
-{% include "navbar.html" %}
-{% endblock %}
 {% block banner_up %}
 {% include 'banner_up.html' %}
 {% endblock %}
 
+{% block navbar %}
+{% include "navbar.html" %}
+{% endblock %}
+
 {% block content %}
-<div>
-    <div>
-        <h1>Profil gracza</h1>
-        <h2>username</h2>
+<div class="grid grid-flow-row-dense grid-cols-6 gap-4 p-4">
+    <div class="grid justify-items-center col-span-1">
+        <div class="">
+            <div>Profil gracza</div>
+            <div>username</div>
+        </div>
+        <div>
+            <img src="{% static 'images/profilowe.webp' %}" alt="Profilowe" width="250">
+        </div>
+        <div>
+            <div>
+                <h3>Statystyki</h3>
+            </div>
+            <div>
+                Siła:
+            </div>
+            <div>
+                Zwinność:
+            </div>
+            <div>
+                Budowa fizyczna:
+            </div>
+            <div>
+                Intelekt:
+            </div>
+        </div>
     </div>
-    <div>
-        ikona gracza
+    <div class="col-span-5">
+        <div>
+            Ekwipunek:
+        </div>
     </div>
-    <div>
-        <div>
-            <h3>Statystyki</h3>
-        </div>
-        <div>
-            Siła:
-        </div>
-        <div>
-            Zwinność:
-        </div>
-        <div>
-            Budowa fizyczna:
-        </div>
-        <div>
-            Intelekt:
-        </div>
+    <div class="col-span-3 grid grid-cols-subgrid gap-4">
+        <div class="col-start-2">Plecak:</div>
     </div>
 </div>
+
 {% endblock %}
 
 {% block footer %}
