Poprawa formatowania w szablonach HTML oraz dodanie załadowania zasobów statycznych w base.html

--- a/klon/templates/base.html
+++ b/klon/templates/base.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}Placeholder{% endblock %}</title>
-
-    {% load static %}
+    <link rel="icon" href="{% static 'images/favicon.png' %}" type="image/png">
 
     <!-- Alpine + HTMX + TAILWIND + CUSTOM -->
     <script src="https://cdn.tailwindcss.com"></script>
