--- a/klon/user_profile/templates/profil_gracza/profil.html
+++ b/klon/user_profile/templates/profil_gracza/profil.html
@@ -29,7 +29,7 @@ Profil gracza
         </div>
         <div>
             <div>
-                <h3>Statystyki</h3>
+                <h3>Statystyki:</h3>
             </div>
             <div>
                 Siła:
