--- a/klon/user_profile/templates/profil_gracza/profil.html
+++ b/klon/user_profile/templates/profil_gracza/profil.html
@@ -21,8 +21,8 @@ Profil gracza
 <div class="grid grid-flow-row-dense grid-cols-6 gap-4 p-4">
     <div class="grid justify-items-center col-span-1">
         <div class="">
-            <div>Profil gracza</div>
-            <div>username</div>
+            <div>Profil gracza:</div>
+            <div>{{ username|capfirst }}</div>
         </div>
         <div>
             <img src="{% static 'images/profilowe.webp' %}" alt="Profilowe" width="250">
@@ -32,16 +32,16 @@ Profil gracza
                 <h3>Statystyki:</h3>
             </div>
             <div>
-                Siła:
+                Siła: {{ sila }}
             </div>
             <div>
-                Zwinność:
+                Zręczność: {{ zrecznosc }}
             </div>
             <div>
-                Budowa fizyczna:
+                Budowa fizyczna: {{ budowa_fizyczna }}
             </div>
             <div>
-                Intelekt:
+                Intelekt: {{ inteligencja }}
             </div>
         </div>
     </div>
