--- a/klon/templates/base.html
+++ b/klon/templates/base.html
@@ -9,16 +9,19 @@
 
     <!-- Alpine + HTMX + TAILWIND + CUSTOM -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="{% static 'css/custom.css' %}" rel="stylesheet" />
+    <link  rel="stylesheet" href="{% static 'css/custom.css' %}" />
     <script defer src="{% static 'js/alpine.min.js' %}"></script>
     <script src="{% static 'js/htmx.min.js' %}"></script>
 
     {% block extra_head %} {% endblock %}
   </head>
   <body>
-    {% block banner_up %} {% endblock %}
-    {% block navbar %} {% endblock %} 
-    {% block content %} {% endblock %} 
-    {% block footer %} {% endblock %}
+    <div class="overlay"></div>
+    <div class="content">
+      {% block banner_up %} {% endblock %}
+      {% block navbar %} {% endblock %} 
+      {% block content %} {% endblock %} 
+      {% block footer %} {% endblock %}
+    </div>
   </body>
 </html>
