--- a/klon/members/templates/authenticate/login.html
+++ b/klon/members/templates/authenticate/login.html
@@ -10,7 +10,7 @@
 {% block content %}
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
     <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-      <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/plus-assets/img/logos/mark.svg?color=indigo&shade=600" alt="Your Company">
+      <img class="mx-auto h-full max-h-20 w-auto " src='/static/images/favicon.png' alt="Logo">
       <h2 class="mt-10 text-center text-2xl/9 font-bold tracking-tight text-gray-900">Zaloguj sie na swojego woja</h2>
     </div>
   
@@ -37,14 +37,17 @@
         </div>
   
         <div>
-          <button type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm/6 font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Sign in</button>
+          <button type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm/6 font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Zaloguj się</button>
         </div>
       </form>
   
       <p class="mt-10 text-center text-sm/6 text-gray-500">
-        Not a member?
-        <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">Start a 14 day free trial</a>
+        Nie masz konta?
+        <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">Zarejestruj się za darmo!</a>
       </p>
     </div>
   </div>
+{% endblock %}
+{% block footer %}
+{% include 'footer.html' %}
 {% endblock %}
