--- a/klon/user_profile/templates/profil_gracza/profil.html
+++ b/klon/user_profile/templates/profil_gracza/profil.html
@@ -6,7 +6,6 @@ Profil gracza
 {% endblock %}
 
 {% block extra_head %}
-
 {% endblock %}
 
 {% block banner_up %}
@@ -20,41 +19,47 @@ Profil gracza
 {% block content %}
 <div class="grid grid-flow-row-dense grid-cols-6 gap-4 p-4">
     <div class="grid justify-items-center col-span-1">
-        <div class="">
-            <div>Profil gracza:</div>
-            <div>{{ username|capfirst }}</div>
+        <div class="text-center">
+            <div class="font-bold text-lg">Profil gracza:</div>
+            <div class="capitalize">{{ player.user.username }}</div>
+            <div>Poziom: {{ player.level }}</div>
+            <div>Doświadczenie: {{ player.experience }} / {{ player.lvlup_exp }}</div>
+            <div class="w-full bg-gray-200 rounded-full h-4 mt-2">
+                <div class="bg-green-600 h-4 rounded-full" style="width: {{ player.experience|divisibleby:player.lvlup_exp|floatformat:2 }}%"></div>
+            </div>
         </div>
-        <div>
-            <img src="{% static 'images/profilowe.webp' %}" alt="Profilowe" width="250">
+        <div class="mt-4">
+            <img src="{% static 'images/profilowe.webp' %}" alt="Profilowe" class="w-64 h-64 object-cover">
         </div>
-        <div>
+        <div class="mt-4">
             <div>
-                <h3>Statystyki:</h3>
+                <h3 class="font-bold text-lg">Statystyki:</h3>
             </div>
-            <div>
-                Siła: {{ sila }}
-            </div>
-            <div>
-                Zręczność: {{ zrecznosc }}
-            </div>
-            <div>
-                Budowa fizyczna: {{ budowa_fizyczna }}
-            </div>
-            <div>
-                Intelekt: {{ inteligencja }}
+            <div>Siła: {{ player.strength }}</div>
+            <div>Zręczność: {{ player.dexterity }}</div>
+            <div>Budowa fizyczna: {{ player.constitution }}</div>
+            <div>Intelekt: {{ player.intelligence }}</div>
+            <div class="mt-4">
+                {% if form %}
+                    <h3 class="font-bold text-lg">Masz {{ player.stat_points }} punktów do rozdania</h3>
+                    <form method="POST" action="{% url 'allocate_stats' %}" class="mt-2">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <button type="submit" class="mt-2 bg-blue-500 text-white py-2 px-4 rounded">Zapisz</button>
+                    </form>
+                {% endif %}
             </div>
         </div>
     </div>
     <div class="col-span-5">
-        <div>
+        <div class="font-bold text-lg">
             Ekwipunek:
         </div>
     </div>
     <div class="col-span-3 grid grid-cols-subgrid gap-4">
-        <div class="col-start-2">Plecak:</div>
+        <div class="col-start-2 font-bold text-lg">Plecak:</div>
     </div>
 </div>
-
 {% endblock %}
 
 {% block footer %}
