dodano funkcje rejestracji

--- a/klon/members/templates/authenticate/login.html
+++ b/klon/members/templates/authenticate/login.html
@@ -47,6 +47,17 @@
       </p>
     </div>
   </div>
+
+  {% if messages %}
+    <div class="mt-4">
+        {% for message in messages %}
+            <div class="bg-green-500 text-white p-2 rounded mb-2">
+                {{ message }}
+            </div>
+        {% endfor %}
+    </div>
+{% endif %}
+
 {% endblock %}
 {% block footer %}
 {% include 'footer.html' %}
