--- a/klon/templates/navbar.html
+++ b/klon/templates/navbar.html
@@ -15,7 +15,7 @@
       >Zaloguj</a
     >
     <a
-      href="#"
+      href="{% url 'register_user' %}"
       class="bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-2 px-4 border border-green-500 hover:border-transparent rounded"
       >Zarejestruj</a
     >
