Dodanie pól max_hp i hp do modelu UserProfile oraz aktualizacja widoku i szablonu profilu gracza

--- a/klon/static/css/custom.css
+++ b/klon/static/css/custom.css
@@ -35,8 +35,8 @@ body {
     margin-top: 0.5rem; 
 }
 
-.experience-bar-fill {
-    background-color: #38a169; 
+.hp-bar-fill {
+    background-color: red; 
     height: 100%;
     border-radius: 9999px; 
 }
