--- a/klon/static/css/custom.css
+++ b/klon/static/css/custom.css
@@ -40,3 +40,9 @@ body {
     height: 100%;
     border-radius: 9999px; 
 }
+
+.experience-bar-fill {
+    background-color: rgb(223, 219, 35); 
+    height: 100%;
+    border-radius: 9999px; 
+}
