--- a/klon/static/css/custom.css
+++ b/klon/static/css/custom.css
@@ -46,3 +46,10 @@ body {
     height: 100%;
     border-radius: 9999px; 
 }
+
+
+#sidebar {
+    background: rgba(255, 255, 255, 0.85);  
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+}
+
