--- a/klon/templates/base.html
+++ b/klon/templates/base.html
@@ -17,9 +17,10 @@
   </head>
   <body>
     <div class="overlay"></div>
-    <div class="content">
+    <div class="content w-7/8 self-end">
       {% block banner_up %} {% endblock %}
       {% block navbar %} {% endblock %} 
+      {% block sidebar %} {% endblock %}
       {% block content %} {% endblock %} 
       {% block footer %} {% endblock %}
     </div>
