--- a/klon/templates/baza_do_edycji.html
+++ b/klon/templates/baza_do_edycji.html
@@ -17,6 +17,10 @@
 {% include "navbar.html" %}
 {% endblock %}
 
+{% block sidebar %}
+{% include 'sidebar.html' %}
+{% endblock %}
+
 {% block content %}
 {% endblock %}
 {% block footer %}
