--- a/klon/user_profile/templates/profil_gracza/profil.html
+++ b/klon/user_profile/templates/profil_gracza/profil.html
@@ -16,6 +16,10 @@ Profil gracza
 {% include "navbar.html" %}
 {% endblock %}
 
+{% block sidebar %} 
+{% include 'sidebar.html' %}
+{% endblock %}
+
 {% block content %}
 <div class="grid grid-flow-row-dense grid-cols-6 gap-4 p-4">
     <div class="grid justify-items-center col-span-1">
