--- a/klon/templates/sidebar.html
+++ b/klon/templates/sidebar.html
@@ -1,4 +1,4 @@
-<aside id="sidebar" class="fixed top-0 left-0 z-40 w-1/7 h-screen" aria-label="Sidebar">
+<aside id="sidebar" class="grid col-span-1 h-screen" aria-label="Sidebar">
     <!-- Zawartość sidebar -->
     To bd sidebar! :P
 </aside>
