--- a/klon/members/templates/authenticate/login.html
+++ b/klon/members/templates/authenticate/login.html
@@ -5,16 +5,19 @@
 {% block navbar %}
 {% include "navbar.html" %}
 {% endblock %}
+{% block banner_up %}
+{% include 'banner_up.html' %}
+{% endblock %}
 
 
 {% block content %}
-<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
-    <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+<div class="w-min-95% flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+    <div class="max-w-sm">
       <img class="mx-auto h-full max-h-20 w-auto " src='/static/images/favicon.png' alt="Logo">
       <h2 class="mt-10 text-center text-2xl/9 font-bold tracking-tight text-gray-900">Zaloguj sie na swojego woja</h2>
     </div>
   
-    <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+    <div class="mt-10">
       <form class="space-y-6" action="#" method="POST">
         {% csrf_token %}
         <div>
