--- a/klon/templates/sidebar.html
+++ b/klon/templates/sidebar.html
@@ -1,4 +1,4 @@
-<aside id="sidebar" class="col-span-1 h-screen" aria-label="Sidebar">
+<aside id="sidebar" class="h-screen" aria-label="Sidebar">
     <!-- Zawartość sidebar -->
     To bd sidebar! :P!!!
 </aside>
