--- a/klon/members/templates/authenticate/login.html
+++ b/klon/members/templates/authenticate/login.html
@@ -8,41 +8,43 @@
 {% block banner_up %}
 {% include 'banner_up.html' %}
 {% endblock %}
-
+{% block sidebar %}
+{% include 'sidebar.html' %}
+{% endblock %}
+{% block footer %}
+{% include 'footer.html' %}
+{% endblock %}
 
 {% block content %}
-<div class="w-min-95% flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
-    <div class="max-w-sm">
-      <img class="mx-auto h-full max-h-20 w-auto " src='/static/images/favicon.png' alt="Logo">
-      <h2 class="mt-10 text-center text-2xl/9 font-bold tracking-tight text-gray-900">Zaloguj sie na swojego woja</h2>
-    </div>
-  
-    <div class="mt-10">
-      <form class="space-y-6" action="#" method="POST">
-        {% csrf_token %}
-        <div>
-          <label for="text" class="block text-sm/6 font-medium text-gray-900">Imię woja</label>
-          <div class="mt-2">
-            <input type="text" name="username" required class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
+  <div class="flex justify-center px-6 py-12 lg:px-8">
+    <div class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl 2xl:max-w-2xl">
+      <img class="mx-auto h-full max-h-20 w-auto" src='/static/images/favicon.png' alt="Logo">
+      <h2 class="mt-10 text-center text-2xl font-bold tracking-tight text-gray-900">Zaloguj sie na swojego woja</h2>
+    
+      <div class="mt-10">
+        <form class="space-y-6" action="#" method="POST">
+          {% csrf_token %}
+          <div>
+            <label for="username" class="block text-sm font-medium text-gray-900">Imię woja</label>
+            <div class="mt-2">
+              <input type="text" name="username" required class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm">
+            </div>
           </div>
-        </div>
-  
-        <div>
-          <div class="flex items-center justify-between">
-            <label for="password" class="block text-sm/6 font-medium text-gray-900">Hasło</label>
-            
+    
+          <div>
+            <div class="flex items-center justify-between">
+              <label for="password" class="block text-sm font-medium text-gray-900">Hasło</label>
+            </div>
+            <div class="mt-2">
+              <input type="password" name="password" required class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm">
+            </div>
           </div>
-          <div class="mt-2">
-            <input type="password" name="password" required class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
+    
+          <div>
+            <button type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Zaloguj się</button>
           </div>
-        </div>
-  
-        <div>
-          <button type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm/6 font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Zaloguj się</button>
-        </div>
-      </form>
-  
-      
+        </form>
+      </div>
     </div>
   </div>
 
@@ -54,9 +56,5 @@
             </div>
         {% endfor %}
     </div>
-{% endif %}
-
-{% endblock %}
-{% block footer %}
-{% include 'footer.html' %}
+  {% endif %}
 {% endblock %}
