--- a/klon/members/templates/authenticate/register.html
+++ b/klon/members/templates/authenticate/register.html
@@ -1,31 +1,39 @@
 {% extends "base.html" %}
-{% block title %}Rejestracja {% endblock %}
+{% block title %}Rejestracja{% endblock %}
 {% block extra_head %}
 {% endblock %}
 {% block navbar %}
 {% include "navbar.html" %}
 {% endblock %}
+{% block sidebar %}
+{% include 'sidebar.html' %}
+{% endblock %}
 
 {% block content %}
-<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
-    <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-      <img class="mx-auto h-full max-h-20 w-auto " src='/static/images/favicon.png' alt="Logo">
-      <h2 class="mt-10 text-center text-2xl/9 font-bold tracking-tight text-gray-900">Rejestracja</h2>
-    </div>
-  
-    <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-        <form class="space-y-6" action="{% url 'register_user' %}" method="POST">
-
-            {% csrf_token %}
-
-            {{ form.as_p }}
-        
+  <div class="flex justify-center px-6 py-12 lg:px-8">
+    <div class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl 2xl:max-w-2xl">
+      <img class="mx-auto h-full max-h-20 w-auto" src='/static/images/favicon.png' alt="Logo">
+      <h2 class="mt-10 text-center text-2xl font-bold tracking-tight text-gray-900">Rejestracja</h2>
+    
+      <div class="mt-10">
+        <form class="space-y-6 text-xs text-gray-500" action="{% url 'register_user' %}" method="POST">
+          {% csrf_token %}
+          {% for field in form %}
             <div>
-                <button type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm/6 font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Zarejestruj się</button>
+              <label for="{{ field.id_for_label }}" class="block text-lg font-medium text-gray-900">{{ field.label }}</label>
+              <div class="mt-2">
+                {{ field }}
+                {% if field.help_text %}
+                  <p class="text-xs text-gray-500">{{ field.help_text }}</p>
+                {% endif %}
+              </div>
             </div>
+          {% endfor %}
+          <div>
+            <button type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Zarejestruj się</button>
+          </div>
         </form>
-
-
+      </div>
     </div>
   </div>
 
@@ -39,11 +47,9 @@
             {% endfor %}
         {% endfor %}
     </div>
-{% endif %}
+  {% endif %}
 
-
-
-{% if messages %}
+  {% if messages %}
     <div class="mt-4">
         {% for message in messages %}
             <div class="bg-green-500 text-white p-2 rounded mb-2">
@@ -51,9 +57,9 @@
             </div>
         {% endfor %}
     </div>
-{% endif %}
-
+  {% endif %}
 {% endblock %}
+
 {% block footer %}
 {% include 'footer.html' %}
 {% endblock %}
