--- a/klon/static/css/custom.css
+++ b/klon/static/css/custom.css
@@ -23,6 +23,8 @@ body {
     padding: 20px;
     max-width: 95%;
     max-height: 95%;
+    min-height: 50%;
+    min-width: 90%;
     border-radius: 10px;
 }
 
