--- a/klon/templates/navbar.html
+++ b/klon/templates/navbar.html
@@ -1,24 +1,19 @@
-<navbar class="float-root">
-  {% if user.is_authenticated %}
-  <div class="float-right py-2">
-    <a
-      href="{% url 'logout_user' %}"
-      class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
-      >Wyloguj</a
-    >
+<nav class="w-full py-2">
+  <div class="container mx-auto flex justify-end">
+    {% if user.is_authenticated %}
+      <a
+        href="{% url 'logout_user' %}"
+        class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded ml-2"
+      >Wyloguj</a>
+    {% else %}
+      <a
+        href="{% url 'login_user' %}"
+        class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded ml-2"
+      >Zaloguj</a>
+      <a
+        href="{% url 'register_user' %}"
+        class="bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-2 px-4 border border-green-500 hover:border-transparent rounded ml-2"
+      >Zarejestruj</a>
+    {% endif %}
   </div>
-  {% else %}
-  <div class="float-right py-2">
-    <a
-      href="{% url 'login_user' %}"
-      class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
-      >Zaloguj</a
-    >
-    <a
-      href="{% url 'register_user' %}"
-      class="bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-2 px-4 border border-green-500 hover:border-transparent rounded"
-      >Zarejestruj</a
-    >
-  </div>
-  {% endif %}
-</navbar>
+</nav>
