--- a/klon/user_profile/templates/profil_gracza/profil.html
+++ b/klon/user_profile/templates/profil_gracza/profil.html
@@ -41,16 +41,46 @@ Profil gracza
             <div class="experience-bar">
                 <div class="hp-bar-fill" style="width: {{ hp_percentage }}%"></div>
             </div>
+            
             <div>
                 <h3 class="font-bold text-lg">Statystyki:</h3>
             </div>
-            <div>Siła: {{ player.strength }} {% if player.stat_points > 0 %}<a href="{% url 'rozdaj_statystyki' %}?stat=strength" class="bg-blue-500 text-white py-1 px-2 rounded">+</a>{% endif %}</div>
-            <div>Zręczność: {{ player.dexterity }} {% if player.stat_points > 0 %}<a href="{% url 'rozdaj_statystyki' %}?stat=dexterity" class="bg-blue-500 text-white py-1 px-2 rounded">+</a>{% endif %}</div>
-            <div>Budowa fizyczna: {{ player.constitution }} {% if player.stat_points > 0 %}<a href="{% url 'rozdaj_statystyki' %}?stat=constitution" class="bg-blue-500 text-white py-1 px-2 rounded">+</a>{% endif %}</div>
-            <div>Intelekt: {{ player.intelligence }} {% if player.stat_points > 0 %}<a href="{% url 'rozdaj_statystyki' %}?stat=intelligence" class="bg-blue-500 text-white py-1 px-2 rounded">+</a>{% endif %}</div>
-            {% if player.stat_points > 0 %} <div class="mt-4">
-                <h3 class="font-bold text-lg">Masz {{ player.stat_points }} punktów do rozdania</h3>
-            </div> {% endif %}
+            <div x-data="{ tooltip: '' }" >
+                <span @mouseover="tooltip = 'Siła wpływa na obrażenia zadawane przeciwnikom.'" @mouseleave="tooltip = ''">
+                    Siła: {{ player.strength }}
+                </span>
+                <span x-show="tooltip" class="absolute bg-gray-700 text-white text-sm rounded p-2 mt-1" x-text="tooltip" style="display: none;"></span>
+                {% if player.stat_points > 0 %}
+                    <a href="{% url 'rozdaj_statystyki' %}?stat=strength" class="bg-blue-500 text-white py-1 px-2 rounded">+</a>
+                {% endif %}
+            </div>
+            <div x-data="{ tooltip: '' }" >
+                <span @mouseover="tooltip = 'Zręczność zwiększa obronę.'" @mouseleave="tooltip = ''">
+                    Zręczność: {{ player.dexterity }}
+                </span>
+                <span x-show="tooltip" class="absolute bg-gray-700 text-white text-sm rounded p-2 mt-1" x-text="tooltip" style="display: none;"></span>
+                {% if player.stat_points > 0 %}
+                    <a href="{% url 'rozdaj_statystyki' %}?stat=dexterity" class="bg-blue-500 text-white py-1 px-2 rounded">+</a>
+                {% endif %}
+            </div>
+            <div x-data="{ tooltip: '' }" >
+                <span @mouseover="tooltip = 'Budowa fizyczna zwiększa maksymalne punkty życia oraz regeneracje punktów życia.'" @mouseleave="tooltip = ''">
+                    Budowa fizyczna: {{ player.constitution }}
+                </span>
+                <span x-show="tooltip" class="absolute bg-gray-700 text-white text-sm rounded p-2 mt-1" x-text="tooltip" style="display: none;"></span>
+                {% if player.stat_points > 0 %}
+                    <a href="{% url 'rozdaj_statystyki' %}?stat=constitution" class="bg-blue-500 text-white py-1 px-2 rounded">+</a>
+                {% endif %}
+            </div>
+            <div x-data="{ tooltip: '' }" >
+                <span @mouseover="tooltip = 'Intelekt wpływa na szybkość regeneracji punktów życia.'" @mouseleave="tooltip = ''">
+                    Intelekt: {{ player.intelligence }}
+                </span>
+                <span x-show="tooltip" class="absolute bg-gray-700 text-white text-sm rounded p-2 mt-1" x-text="tooltip" style="display: none;"></span>
+                {% if player.stat_points > 0 %}
+                    <a href="{% url 'rozdaj_statystyki' %}?stat=intelligence" class="bg-blue-500 text-white py-1 px-2 rounded">+</a>
+                {% endif %}
+            </div>
             <div>Atak: {{ player.attack }}</div>
             <div>Obrona: {{ player.defence }}</div>
         </div>
