--- a/klon/templates/base.html
+++ b/klon/templates/base.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="overlay"></div>
-    <div class="grid grid-cols-[200px_9fr] gap-3">
+    <div class="grid grid-cols-[1fr_9fr] gap-1">
       
       {% block sidebar %} {% endblock %}
       <div class="content">
