--- a/klon/static/css/custom.css
+++ b/klon/static/css/custom.css
@@ -54,6 +54,8 @@ body {
     background: rgba(255, 255, 255, 0.85);  
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     z-index: 1;
+    position: relative;
+    top: 230px; /* Dopasuj do wysokości navbara */
 }
 
 .tooltip {
