--- a/klon/templates/sidebar.html
+++ b/klon/templates/sidebar.html
@@ -1,4 +1,27 @@
 <aside id="sidebar" class="h-screen" aria-label="Sidebar">
-    <!-- Zawartość sidebar -->
-    To bd sidebar! :P!!!
+    <div class="container mx-auto flex justify-end">
+        {% if user.is_authenticated %}
+          <a
+            href="{% url 'profil' %}"
+            class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded ml-2"
+          >Profil</a>
+          <a
+            href="{% url 'mapa' %}"
+            class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded ml-2"
+          >Lokacje</a>
+          <a
+            href="{% url 'logout_user' %}"
+            class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded ml-2"
+          >Wyloguj</a>
+        {% else %}
+          <a
+            href="{% url 'login_user' %}"
+            class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded ml-2"
+          >Zaloguj</a>
+          <a
+            href="{% url 'register_user' %}"
+            class="bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-2 px-4 border border-green-500 hover:border-transparent rounded ml-2"
+          >Zarejestruj</a>
+        {% endif %}
+      </div>
 </aside>
