--- a/klon/templates/sidebar.html
+++ b/klon/templates/sidebar.html
@@ -1,27 +1,27 @@
 <aside id="sidebar" class="h-screen" aria-label="Sidebar">
-    <div class="container mx-auto flex justify-end">
+    <div class="container mx-auto flex flex-col">
         {% if user.is_authenticated %}
           <a
             href="{% url 'profil' %}"
-            class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded ml-2"
-          >Profil</a>
+            class="bg-transparent hover:bg-amber-900 text-amber-900 font-semibold hover:text-white py-2 px-4 border border-amber-900 hover:border-transparent rounded w-full"
+          >PROFIL</a>
           <a
             href="{% url 'mapa' %}"
-            class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded ml-2"
-          >Lokacje</a>
+            class="bg-transparent hover:bg-amber-900 text-amber-900 font-semibold hover:text-white py-2 px-4 border border-amber-900 hover:border-transparent rounded w-full"
+          >LOKACJE</a>
           <a
             href="{% url 'logout_user' %}"
-            class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded ml-2"
-          >Wyloguj</a>
+            class="bg-transparent hover:bg-amber-900 text-amber-900 font-semibold hover:text-white py-2 px-4 border border-amber-900 hover:border-transparent rounded w-full"
+          >WYLOGUJ</a>
         {% else %}
           <a
             href="{% url 'login_user' %}"
-            class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded ml-2"
+            class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded w-full"
           >Zaloguj</a>
           <a
             href="{% url 'register_user' %}"
-            class="bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-2 px-4 border border-green-500 hover:border-transparent rounded ml-2"
+            class="bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-2 px-4 border border-green-500 hover:border-transparent rounded w-full"
           >Zarejestruj</a>
         {% endif %}
-      </div>
+    </div>
 </aside>
