--- a/klon/templates/sidebar.html
+++ b/klon/templates/sidebar.html
@@ -23,5 +23,10 @@
             class="bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-2 px-4 border border-green-500 hover:border-transparent rounded w-full"
           >Zarejestruj</a>
         {% endif %}
+        {% if user.is_superuser %}
+          <a href="/admin/" class="bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-2 px-4 border border-green-500 hover:border-transparent rounded w-full">
+            Admin Panel
+          </a>
+{% endif %}
     </div>
 </aside>
