refaktoryzacja przeciwnikó aktualizacja

--- a/klon/lokacje/templates/lokacje/mapa.html
+++ b/klon/lokacje/templates/lokacje/mapa.html
@@ -15,11 +15,11 @@
       <a
         href="{% url 'beast_dung' %}"
         class="bg-transparent hover:bg-amber-900 text-amber-900 font-semibold hover:text-white py-2 px-4 border border-amber-900 hover:border-transparent rounded w-full"
-      >Lochy bestii</a>
+      >{{location.name}}</a>
       <a
         href="{% url 'circus' %}"
         class="bg-transparent hover:bg-amber-900 text-amber-900 font-semibold hover:text-white py-2 px-4 border border-amber-900 hover:border-transparent rounded w-full"
-      >Cyrk</a>
+      >{{location2.name}}</a>
       <a
       href="{% url 'dessert_hills' %}"
       class="bg-transparent hover:bg-amber-900 text-amber-900 font-semibold hover:text-white py-2 px-4 border border-amber-900 hover:border-transparent rounded w-full"
