--- a/klon/lokacje/templates/lokacje/circus.html
+++ b/klon/lokacje/templates/lokacje/circus.html
@@ -22,7 +22,12 @@
 {% endblock %}
 
 {% block content %}
-CIRCUS
+<span> {{location.name}}:</span>
+</br>
+{% for enemy in enemies %}
+<span> {{enemy}} LVL:{{enemy.lvl}}
+</span> </br>
+{% endfor %}
 {% endblock %}
 {% block footer %}
 {% include 'footer.html' %}
