--- a/klon/user_profile/templates/profil_gracza/profil.html
+++ b/klon/user_profile/templates/profil_gracza/profil.html
@@ -33,6 +33,10 @@ Profil gracza
             <div class="experience-bar">
                 <div class="hp-bar-fill" style="width: {{ hp_percentage }}%"></div>
             </div>
+            <div>Stamina: {{ player.stamina }} / {{ player.max_stamina }}</div>
+            <div class="experience-bar">
+                <div class="stamina-bar-fill" style="width: {{ stamina_percentage }}%"></div>
+            </div>
             
             <div>
                 <h3 class="font-bold text-lg">Statystyki:</h3>
