implementacja staminy w walce

--- a/klon/lokacje/templates/lokacje/fight.html
+++ b/klon/lokacje/templates/lokacje/fight.html
@@ -24,7 +24,7 @@ Walka: {{ enemy.name }} vs {{ user_profile.user.username }}
   <input type="radio" name="strategy" value="balanced"> Zbalansowana<br>
   <input type="radio" name="strategy" value="defensive"> Defensywna<br><br>
 
-  <button type="submit">Rozpocznij walkę</button>
+  <button type="submit">Rozpocznij walkę (-1 Stamina)</button>
 </form>
 
 <div id="fight-result" class="mt-4">
