--- a/klon/templates/sidebar.html
+++ b/klon/templates/sidebar.html
@@ -33,6 +33,11 @@
       </div>
     </div>
 
+      <a href="{% url 'merchant_list' %}"
+         class="w-full text-center rounded bg-transparent border border-amber-700 text-amber-500 hover:bg-amber-700 hover:text-white transition py-2 font-semibold">
+        Handlarz
+      </a>
+
       <a href="{% url 'logout_user' %}"
          class="w-full text-center rounded bg-transparent border border-amber-700 text-amber-500 hover:bg-amber-700 hover:text-white transition py-2 font-semibold">
         WYLOGUJ
