--- a/klon/templates/sidebar.html
+++ b/klon/templates/sidebar.html
@@ -15,19 +15,19 @@
         <div class="bg-neutral-800 border border-neutral-700 rounded shadow-md flex flex-col text-sm">
           <a href="{% url 'beast_dung' %}"
             class="px-4 py-2 hover:bg-amber-800 text-amber-300 border-b border-neutral-700 rounded-t">
-            {{ location.name }}
+            Zdziczałe Lochy
           </a>
           <a href="{% url 'circus' %}"
             class="px-4 py-2 hover:bg-amber-800 text-amber-300 border-b border-neutral-700">
-            {{ location2.name }}
+            Cyrk Gladiatorów
           </a>
           <a href="{% url 'dessert_hills' %}"
             class="px-4 py-2 hover:bg-amber-800 text-amber-300 border-b border-neutral-700">
-            {{ location3.name }}
+            Pustynne Wzgórza
           </a>
           <a href="{% url 'plains' %}"
             class="px-4 py-2 hover:bg-amber-800 text-amber-300 rounded-b">
-            {{ location4.name }}
+            Równiny
           </a>
         </div>
       </div>
