--- a/klon/merchant/templates/merchant/merchant_list.html
+++ b/klon/merchant/templates/merchant/merchant_list.html
@@ -1,3 +1,27 @@
+{% extends "base.html" %}
+{% load static %}
+
+{% block title %} 
+Handlarz
+{% endblock %}
+
+{% block extra_head %}
+
+{% endblock %}
+
+{% block banner_up %}
+{% include 'banner_up.html' %}
+{% endblock %}
+
+{% block navbar %}
+{% include "navbar.html" %}
+{% endblock %}
+
+{% block sidebar %}
+{% include 'sidebar.html' %}
+{% endblock %}
+
+{% block content %}
 <h1>Handlarz</h1>
 <div style="margin-bottom: 20px;">
     <strong>{{ merchant.name }}</strong>
@@ -9,3 +33,7 @@
         {% endfor %}
     </div>
 </div>
+{% endblock %}
+{% block footer %}
+{% include 'footer.html' %}
+{% endblock %}
