--- a/klon/inventory/templates/inventory/backpackComponent.html
+++ b/klon/inventory/templates/inventory/backpackComponent.html
@@ -1,6 +1,5 @@
 {% load static %}
 
-
 <div class="grid grid-cols-2 gap-1">
   <div class="col-span-2 flex justify-between items-center">
     <button
@@ -12,5 +11,18 @@
   </div>
 
   <div class="col-span-2 grid grid-cols-3 gap-4 mt-4">
-    Backpack component
+    {% for item in items %}
+      <div class="border p-2 rounded">
+        <div>{{ item.name }} ({{ item.type }})</div>
+        {% if item.equipped %}
+          <div class="text-green-600 font-bold">Equipped</div>
+          <a href="{% url 'unequip_item' item.id %}" class="text-red-500">Unequip</a>
+        {% else %}
+          <a href="{% url 'equip_item' item.id %}" class="text-blue-500">Equip</a>
+        {% endif %}
+      </div>
+    {% empty %}
+      <div class="col-span-3 text-gray-500">Brak przedmiotów w plecaku.</div>
+    {% endfor %}
   </div>
+</div>
