--- a/klon/templates/sidebar.html
+++ b/klon/templates/sidebar.html
@@ -1,4 +1,4 @@
-<aside id="sidebar" class="h-screen bg-neutral-900 border-r border-neutral-800 p-4" aria-label="Sidebar">
+<aside id="sidebar" class="h-full bg-neutral-900 border-r border-neutral-800 p-4" aria-label="Sidebar">
   <div class="flex flex-col gap-3 text-sm">
     {% if user.is_authenticated %}
       <a href="{% url 'profil' %}"
