--- a/klon/lokacje/templates/lokacje/mapa.html
+++ b/klon/lokacje/templates/lokacje/mapa.html
@@ -15,7 +15,7 @@
       <a
         href="{% url 'beast_dung' %}"
         class="bg-transparent hover:bg-amber-900 text-amber-900 font-semibold hover:text-white py-2 px-4 border border-amber-900 hover:border-transparent rounded w-full"
-      >{{location.name}}</a>
+      >{{location1.name}}</a>
       <a
         href="{% url 'circus' %}"
         class="bg-transparent hover:bg-amber-900 text-amber-900 font-semibold hover:text-white py-2 px-4 border border-amber-900 hover:border-transparent rounded w-full"
