--- a/klon/templates/banner_up.html
+++ b/klon/templates/banner_up.html
@@ -1,1 +1,24 @@
-<h1> BANNER </h1>
+<div class="w-full bg-gray-800 text-white px-2 py-1"  id="player-banner">
+  <div class="flex flex-col sm:flex-row flex-wrap items-center justify-between gap-2 text-xs sm:text-base">
+    <div class="flex items-center gap-1">
+      <span class="font-semibold">Gracz:</span>
+      <span>{{ player.user.username }}</span>
+    </div>
+    <div class="flex items-center gap-1">
+      <span class="font-semibold">HP:</span>
+      <span>{{ player.hp }} / {{ player.max_hp }}</span>
+    </div>
+    <div class="flex items-center gap-1">
+      <span class="font-semibold">Stamina:</span>
+      <span>{{ player.stamina }} / {{ player.max_stamina }}</span>
+    </div>
+    <div class="flex items-center gap-1">
+      <span class="font-semibold">EXP:</span>
+      <span>{{ player.experience }} / {{ player.lvlup_exp }}</span>
+    </div>
+    <div class="flex items-center gap-1">
+      <span class="font-semibold">Złoto:</span>
+      <span>{{ player.gold }}</span>
+    </div>
+  </div>
+</div>
