--- a/klon/user_profile/templates/profil_gracza/profil.html
+++ b/klon/user_profile/templates/profil_gracza/profil.html
@@ -8,6 +8,10 @@ Profil gracza
 {% block extra_head %}
 {% endblock %}
 
+{% block banner_up %}
+    {% include 'banner_up.html' %}
+{% endblock %}
+
 {% block sidebar %} 
 {% include 'sidebar.html' %}
 {% endblock %}
